@@ -1,3 +1,11 @@
+2012-11-19  Sofiane Naci  <sofiane.naci@arm.com>
+
+	Backport from mainline
+	2012-11-19  Sofiane Naci  <sofiane.naci@arm.com>
+
+	* config/aarch64/aarch64.c
+	(aarch64_output_mi_thunk): Refactor to generate RTL patterns.
+
 2012-11-03  Peter Bergner  <bergner@vnet.ibm.com>
 
 	Backport from mainline
